[Тесты] Экземпляр менеджера успешно создан.

--- a/tests/testdox.html
+++ b/tests/testdox.html
@@ -30,7 +30,7 @@
     <body>
         <h2 id="Tests\Unit\Support\GRecaptchaManagerTest">GRecaptcha Manager (Tests\Unit\Support\GRecaptchaManager)</h2>
         <ul>
-            <li style="color: #ef2929;">❌ Example</li>
+            <li style="color: #555753;">✓ Successfully initiated</li>
         </ul>
     </body>
 </html>
