--- a/tests/testdox.html
+++ b/tests/testdox.html
@@ -31,6 +31,7 @@
         <h2 id="Tests\Unit\Support\GRecaptchaManagerTest">GRecaptcha Manager (Tests\Unit\Support\GRecaptchaManager)</h2>
         <ul>
             <li style="color: #555753;">✓ Successfully initiated</li>
+            <li style="color: #555753;">✓ Get default driver</li>
         </ul>
     </body>
 </html>
